svg-mask/style.css
:root {
  --wedge-height: 300px;
}

html {
  height: 100%;
}

body {
  width: 100%;
	height: 100%;
}

.main-container {
  width: 10px;
  height: 10px;
  overflow: hidden;
  /* display: none; */
}

.masked-content {
  
  background-color: blue;
  
  -webkit-mask-image: url("mask-slant.svg");
  mask-image: url("mask-slant.svg");
  mask-repeat: no-repeat;
  
  position: absolute;
  
  transform-origin: bottom left;
  width: 3200px;
  height: 1150px;
  transform: translateY(calc(-100% + var(--wedge-height)));
  
  z-index: 1;
}

.spiral-container {
  position: absolute;      
}

.spiral-container.masked {
  bottom: 0;
  transform: translate(calc(-50% + var(--wedge-height) * 0.5), calc(50% - var(--wedge-height) * 0.6));
}

.spiral-container.main {
  top: var(--wedge-height);
  transform: translate(calc(-50% + var(--wedge-height) * 0.5), calc(-50% - var(--wedge-height) * 0.6));
}

.spiral-pattern {
  background-image: url("gjc-pattern.svg");

  width: 1200px;
  height: 1200px;
  
  animation: rotate 6s linear infinite;
  background-repeat: no-repeat;
}

.spiral-pattern.alt {
  background-image: url("gjc-pattern-alt.svg");
}

@keyframes rotate {
  0% { transform: rotate(0deg) }
  100% { transform: rotate(360deg) }
}

